--- a/src/chess-client/src/App.css
+++ b/src/chess-client/src/App.css
@@ -1,5 +1,9 @@
+hr {
+  border-color: rgba(255, 255, 255, 0.5) !important;
+}
+
 .board {
-  width: 800px;
+  width: 800px !important;
   height: 675px;
 }
 .board .piece-img {
